fixing bug for ig widget on small devices

--- a/assets/css/sass/instagram.scss
+++ b/assets/css/sass/instagram.scss
@@ -42,6 +42,7 @@
       background-position: bottom center;
     }
     .ig-description {
+      max-width: calc(100vw - 2rem);
       height: 125px;
       line-height: 25px;
       margin-bottom: 2.5rem;
